[package]
name = "beatStorageServer"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rusqlite = { version = "0.35.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }